set overflow-x of body to hidden to avoid weird layout on small screens

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -12,7 +12,6 @@
 }
 
 .content {
-  width: 50%;
   height: 100%;
   color: var(--font-color);
   font-size: 1.2rem;
